fix contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #6e661a;
+	background-color: rgb(129, 118, 28);
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
